# dd_me5

./: Makefile  README.md  environment.yml  pyproject.toml
docker/: .dockerignore  Dockerfile
src/dd_clir/core/: __init__.py  utils.py
src/dd_clir/core/models/: __init__.py  base.py  onnx.py  pytorch.py
src/dd_clir/interfaces/: _cli.py  _fastapi.py
src/dd_clir/schemas/: request.py  response.py  settings.py
src/dd_clir/utils/: batch.py  info.py  logging.py
src/dd_me5/core/: model.py
src/dd_me5/interfaces/: _api.py  _cli.py
src/dd_me5/schemas/: enums.py  request.py  response.py  settings.py
src/dd_me5/utils/: info.py  logging.py
tests/assets/: zho.txt
