[project]
name = "dd_clir"
description = "A repository for multilingual text embedding."
keywords = ["feature-extraction", "multilingual", "nlp", "text-embedding"]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "langchain-text-splitters",
    "loguru",
    "pydantic>=2",
    "pydantic-settings",
    "transformers",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "black", "flake8", "isort"]
fastapi = ["uvicorn", "gunicorn", "python-multipart", "aiohttp", "fastapi"]
cpu = ["optimum[onnxruntime]"]
cuda = ["optimum[onnxruntime-gpu]"]

[project.scripts]
fastapi = "dd_clir.interfaces._fastapi:main"